# PDFlex

./: .env-example  LICENSE  pyproject.toml
cache/: llm_cache.json
inference/: groq_provider.py  llm_provider_factory.py
parser/: config.py  detection.py  extractor.py  orchestrator.py  state.py
plugin/: plugin_loader.py
