[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
]
